<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/food_navigation_menu_item"
        android:icon="@drawable/ic_food"
        android:title="@string/drawer_food_title" />
    <item
        android:id="@+id/orders_navigation_menu_item"
        android:icon="@drawable/ic_orders"
        android:title="@string/drawer_orders_title" />
    <item
        android:id="@+id/quick_order_navigation_menu_item"
        android:icon="@drawable/ic_favorite"
        android:title="@string/drawer_quick_order_title" />
</menu>
