<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/items_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/items_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/items_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/transparent"
            android:paddingBottom="@dimen/list_item_padding"
            android:scrollbars="vertical"
            android:paddingTop="@dimen/list_item_padding"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/no_items_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:contentDescription="@string/no_items"
            android:src="@drawable/ic_no_item" />

        <TextView
            android:id="@+id/no_items_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/list_item_padding"
            android:text="@string/no_items" />

    </LinearLayout>

</RelativeLayout>
